<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/seTime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        app:bootstrapText="@string/setting_times">

    </com.beardedhen.androidbootstrap.AwesomeTextView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.knsw.kintai.MainActivity">

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/startTime_edittext"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:focusable="false"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:roundedCorners="true"
            android:layout_weight="1"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/endTime_edittext"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:focusable="false"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:roundedCorners="true"
            android:layout_weight="1" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/breakTime_edittext"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:focusable="false"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:roundedCorners="true"
            android:layout_weight="1" />

        <Space
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/workContent_textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        app:bootstrapText="@string/workContent" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/workContent_edittext"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="left"
        android:textSize="15sp"
        android:inputType="text"
        app:bootstrapSize="md"
        app:bootstrapBrand="info"
        app:roundedCorners="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/dayOff_lateOrEarly_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        app:bootstrapText="@string/dayOff_lateOrEarly" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        tools:context="com.knsw.kintai.MainActivity">

        <Spinner
            android:id="@+id/dayOffListSpinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:entries="@array/dayOffList"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/lateOrEarlySpinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:entries="@array/lateOrEarly"
            android:spinnerMode="dialog" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/lateOrEarlyTime_edittext"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:focusable="false"
            app:bootstrapBrand="info"
            app:bootstrapSize="md"
            app:roundedCorners="true" />
    </LinearLayout>

    <Space
    android:layout_width="match_parent"
    android:layout_height="15dp" />

</LinearLayout>